--- a/frontend/src/web/pages/home/home.page.scss
+++ b/frontend/src/web/pages/home/home.page.scss
@@ -1,11 +1,8 @@
 .home-container {
-  height: 100%;
-  min-height: 100vh;
   padding: 2rem;
 
   ion-row {
-    height: 100%;
-    min-height: 80vh;
+    min-height: 70vh;
   }
 }
 
